--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.9.0",
     "gatsby-plugin-styled-components": "^5.9.0",
+    "gatsby-remark-katex": "^6.9.0",
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
+    "katex": "^0.15.2",
+    "mdast-util-math": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.3.3"
